# JobsCrmAssistant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  add_frontmatter.py  pyproject.toml  requirements-dev.txt
.cursor/rules/: 000-global-rules.mdc  100-architecture.mdc  110-naming-conventions.mdc  120-coding-style.mdc  130-dependencies.mdc  135-required-tools.mdc  140-testing.mdc  150-api-guidelines.mdc  160-error-handling.mdc  170-performance.mdc  180-security.mdc  190-documentation.mdc  195-rule-file-standards.mdc  200-devops.mdc  210-task-workflow.mdc  220-review-guidelines.mdc  230-git-branch-policy.mdc  235-github-issue-standards.mdc  236-github-cli-usage.mdc  240-database-guidelines.mdc  270-data-privacy.mdc  270-internationalization.mdc  280-monitoring-logging.mdc  310-async-processing.mdc  320-api-versioning.mdc  340-incident-response.mdc  350-configuration-management.mdc  cursorrules.md  cursorrules.mdc
.cursor/rules/200-development/: 180-security.mdc
.cursor/rules/500-operations/: 270-internationalization.mdc
.cursor/rules/core/: 000-global-rules.mdc
.cursor/rules/development/: 130-dependencies.mdc  140-project-tooling.mdc  140-testing.mdc  170-performance.mdc
.cursor/rules/process/: 200-devops.mdc  220-review-guidelines.mdc
scripts/: assign_priorities.sh
src/jobs_crm_assistant/api/: app.py
src/jobs_crm_assistant/core/: config.py
src/jobs_crm_assistant/utils/: logging.py
tests/: conftest.py
