[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobs_crm_assistant"
version = "0.1.0"
description = "AI-powered CRM Assistant for job applications"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Alexander Fedin" }
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pandas>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.10.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0"
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=jobs_crm_assistant"
testpaths = ["tests"] 